--- a/invento/invento/templates/main/index.html
+++ b/invento/invento/templates/main/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Welcome to Invento</title>
+	{% load static %}
+	<link rel="stylesheet" href="{% static 'output.css' %}">
 </head>
 <body>
-	<h1>Welcome to Invento!</h1>
+	<h1 class="text-xl font-bold underline">Welcome to Invento!</h1>
 </body>
 </html>
