--- a/invento/invento/static/output.css
+++ b/invento/invento/static/output.css
@@ -558,20 +558,134 @@ video {
   position: static;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.flex {
+  display: flex;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.h-lvh {
+  height: 100lvh;
 }
 
-.underline {
-  text-decoration-line: underline;
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-grabbing {
+  cursor: grabbing;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-\[\#5A9D8D\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(90 157 141 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[EFFCF8\] {
+  background-color: EFFCF8;
+}
+
+.bg-\[5A9D8D\] {
+  background-color: 5A9D8D;
+}
+
+.bg-\[\#5A9D8D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(90 157 141 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[url\(\'\/media\/bg\.svg\'\)\] {
+  background-image: url('/media/bg.svg');
+}
+
+.bg-\[url\(\'https\:\/\/external-content\.duckduckgo\.com\/iu\/\?u\=https\%3A\%2F\%2Fwww\.thewowstyle\.com\%2Fwp-content\%2Fuploads\%2F2015\%2F01\%2Fnature-images\.\.jpg\&f\=1\&nofb\=1\&ipt\=85da73d90116c901d04fcdb54ecdd55709b803401b7dddd2fb4dba95ad00955d\&ipo\=images\'\)\] {
+  background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.thewowstyle.com%2Fwp-content%2Fuploads%2F2015%2F01%2Fnature-images..jpg&f=1&nofb=1&ipt=85da73d90116c901d04fcdb54ecdd55709b803401b7dddd2fb4dba95ad00955d&ipo=images');
+}
+
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
+}
+
+.bg-\[url\(\'media\/bg\.svg\'\)\] {
+  background-image: url('media/bg.svg');
+}
+
+.bg-auto {
+  background-size: auto;
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-75 {
+  transition-duration: 75ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
+}
+
+.hover\:bg-\[\#5A9D8D\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(90 157 141 / var(--tw-bg-opacity, 1));
 }
