--- a/invento/invento/templates/main/index.html
+++ b/invento/invento/templates/main/index.html
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" href="{% static 'output.css' %}">
 </head>
 <body>
-	<h1 class="text-xl font-bold underline">Welcome to Invento!</h1>
+	<!--<main class="h-10 bg-auto bg-[url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.thewowstyle.com%2Fwp-content%2Fuploads%2F2015%2F01%2Fnature-images..jpg&f=1&nofb=1&ipt=85da73d90116c901d04fcdb54ecdd55709b803401b7dddd2fb4dba95ad00955d&ipo=images')]">-->
+	<main class="h-lvh bg-cover bg-center bg-no-repeat bg-[url('media/bg.svg')] flex justify-center items-center flex-col">
+	<h1 class="text-4xl">Welcome to Invento!</h1>
+	<div class="border-[#5A9D8D] border p-3 hover:bg-[#5A9D8D] cursor-pointer rounded-md transition-all duration-100">Go to invento</div>
+<!--EFFCF8-->
+<!--5A9D8D-->
+	</main>
 </body>
 </html>
