--- a/invento/inventory/static/inventory/output.css
+++ b/invento/inventory/static/inventory/output.css
@@ -566,20 +566,12 @@ video {
   height: 2.5rem;
 }
 
-.h-lvh {
-  height: 100lvh;
-}
-
 .h-full {
   height: 100%;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.w-lvw {
-  width: 100lvw;
+.h-lvh {
+  height: 100lvh;
 }
 
 .w-2\/5 {
@@ -588,22 +580,6 @@ video {
 
 .w-3\/5 {
   width: 60%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-52 {
@@ -634,21 +610,24 @@ video {
   gap: 1rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.gap-10 {
+  gap: 2.5rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 
-.rounded-s {
-  border-start-start-radius: 0.25rem;
-  border-end-start-radius: 0.25rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -669,10 +648,6 @@ video {
   background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.thewowstyle.com%2Fwp-content%2Fuploads%2F2015%2F01%2Fnature-images..jpg&f=1&nofb=1&ipt=85da73d90116c901d04fcdb54ecdd55709b803401b7dddd2fb4dba95ad00955d&ipo=images');
 }
 
-.bg-\[url\(\'inventory\/media\/bg\.svg\'\)\] {
-  background-image: url('inventory/media/bg.svg');
-}
-
 .bg-\[url\(\'media\/bg\.svg\'\)\] {
   background-image: url('media/bg.svg');
 }
@@ -681,34 +656,14 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
-.from-\[\#5A9D8D\] {
-  --tw-gradient-from: #5A9D8D var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(90 157 141 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#EFFCF8\] {
-  --tw-gradient-from: #EFFCF8 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(239 252 248 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-\[\#3F6D62\] {
   --tw-gradient-from: #3F6D62 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(63 109 98 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-\[\#EFFCF8\] {
-  --tw-gradient-to: #EFFCF8 var(--tw-gradient-to-position);
-}
-
 .to-\[\#5A9D8D\] {
   --tw-gradient-to: #5A9D8D var(--tw-gradient-to-position);
-}
-
-.to-\[\#7BB0A3\] {
-  --tw-gradient-to: #7BB0A3 var(--tw-gradient-to-position);
 }
 
 .bg-auto {
@@ -727,25 +682,24 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.text-center {
-  text-align: center;
+.p-8 {
+  padding: 2rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-center {
+  text-align: center;
 }
 
 .text-3xl {
@@ -753,13 +707,13 @@ video {
   line-height: 2.25rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+.font-bold {
+  font-weight: 700;
 }
 
 .text-\[\#2D4E46\] {
@@ -770,6 +724,11 @@ video {
 .text-\[\#5A9D8D\] {
   --tw-text-opacity: 1;
   color: rgb(90 157 141 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .transition-all {
@@ -799,4 +758,9 @@ video {
 .hover\:text-\[\#5A9D8D\]:hover {
   --tw-text-opacity: 1;
   color: rgb(90 157 141 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
