Minor design changes.

--- a/invento/inventory/templates/inventory/index.html
+++ b/invento/inventory/templates/inventory/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="{% static 'inventory/output.css' %}">
 </head>
 <body>
-	<main class="bg-[url('media/bg.svg')] h-lvh bg-no-repeat bg-cover bg-center p-10 flex gap-4 justify-center">
+	<main class="bg-[url('media/bg.svg')] h-lvh bg-no-repeat bg-cover bg-center flex gap-4 justify-center">
 		<section class="bg-gradient-to-t from-[#3F6D62] to-[#5A9D8D] w-2/5 rounded-md justify-center items-center flex flex-col p-10">
 			<div class="flex flex-col items-center justify-center h-full">
 				<h1 class="text-4xl text-white font-bold">WELCOME</h1>
