--- a/invento/inventory/templates/inventory/login.html
+++ b/invento/inventory/templates/inventory/login.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="{% static 'inventory/output.css' %}">
 </head>
 <body>
-	<main class="bg-[url('media/bg.svg')] h-lvh bg-no-repeat bg-cover bg-center p-10 flex gap-4 justify-center">
+	<main class="bg-[url('media/bg.svg')] h-lvh bg-no-repeat bg-cover bg-center flex gap-4 justify-center">
 		<section class="bg-gradient-to-t w-3/5 flex items-center justify-center" >
 			<form action="" method ="post" class="flex items-center justify-center flex-col gap-5">
 				{% csrf_token %}
